--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@ Variables
   --primaryLightColor: #d4e6a5;
   --primaryColor: #34561d;
   --primaryDarkColor: #c02c03;
-  --mainWhite: #D8D8D8;
+  --mainWhite: #d8d8d8;
   --offWhite: #f7f7f7;
-  --mainBackground: #767171;
+  --mainBackground: #92BA92;
   --mainOverlay: rgba(35, 10, 36, 0.4);
   --mainBlack: #222;
   --mainGrey: #ececec;
@@ -32,8 +32,8 @@ Global Styles
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: var(--mainBlack);
   background: var(--mainBackground);
   line-height: 1.4;
@@ -371,7 +371,7 @@ Cocktail
 .loader:after {
   position: absolute;
   top: 0;
-  content: '';
+  content: "";
 }
 .loader:before {
   left: -1.5em;
